--- a/Client/Pages/Sklad/PrihodsPage.xaml
+++ b/Client/Pages/Sklad/PrihodsPage.xaml
@@ -6,41 +6,38 @@
       xmlns:local="clr-namespace:Client.Pages.Sklad"
       mc:Ignorable="d" 
       d:DesignHeight="1000" d:DesignWidth="1300" xmlns:hc="https://handyorg.github.io/handycontrol" 
-                xmlns:usercontrols="clr-namespace:Client.UserControls" >
+                xmlns:usercontrols="clr-namespace:Client.UserControls" d:DataContext="{d:DesignInstance Type=local:PrihodsPage}">
 
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="400"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <usercontrols:ToolBarControl Grid.Row="0"/>
+        <usercontrols:ToolBarControl Grid.Row="0" AddClick="ToolBarControl_AddClick" SaveClick="ToolBarControl_SaveClick" DeleteClick="ToolBarControl_DeleteClick" UpdateClick="ToolBarControl_UpdateClick"/>
 
         <hc:SearchBar Grid.Row="0" HorizontalAlignment="Center" Width="300"/>
-        <Calendar SelectionMode="SingleRange" Grid.Row="1"/>
+        <Calendar SelectionMode="SingleRange" Grid.Row="5" x:Name="calendarFilter" SelectedDatesChanged="calendarFilter_SelectedDatesChanged"/>
 
-        <DataGrid Grid.Row="2" HeadersVisibility="All" RowHeaderWidth="60">
-            <DataGrid.RowHeaderTemplate>
-                <DataTemplate>
-                    <CheckBox IsChecked="{Binding IsSelected,RelativeSource={RelativeSource AncestorType=DataGridRow}}"/>
-                </DataTemplate>
-            </DataGrid.RowHeaderTemplate>
+        <DatePicker Grid.Row="1" Grid.Column="0" x:Name="datePickerStart" hc:InfoElement.Title="С" Width="200" SelectedDate="{Binding DateStart}"/>
+        <DatePicker Grid.Row="2" Grid.Column="0" x:Name="datePickerEnd" hc:InfoElement.Title="По" Width="200" SelectedDate="{Binding DateEnd}"/>
+        <DataGrid Grid.Row="4" HeadersVisibility="All" RowHeaderWidth="60" ItemsSource="{Binding Sklad_prihods}" 
+                  AutoGenerateColumns="False" x:Name="datagridPrihods" MouseDoubleClick="DataGrid_MouseDoubleClick"  hc:DataGridAttach.ShowRowNumber="True">
+            
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding Index}" Header="Дата"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="№"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="Принял"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="Кол-во пачек"/>
-                <DataGridCheckBoxColumn CanUserResize="False" Binding="{Binding IsSelected}" Header="На складе"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="№ накл"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="Дата накл"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="Стоим без дост"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="Стоим с дост"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="Получатель"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="№ счета"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="Перевозчик"/>
-                <DataGridTextColumn Binding="{Binding Name}" Header="Сумма дост"/>
-                <DataGridCheckBoxColumn CanUserResize="False" Binding="{Binding IsSelected}" Header="Опл транс"/>
+                <DataGridTextColumn Binding="{Binding Date_prih, StringFormat=dd.MM.yyyy}" Header="Дата" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Nom_prih}" Header="№"/>
+                <DataGridTextColumn Binding="{Binding Polz.Surname}" Header="Принял" IsReadOnly="True"/>
+                <DataGridCheckBoxColumn CanUserResize="False" Binding="{Binding Is_in_sklad}" Header="На складе"/>
+                <DataGridTextColumn Binding="{Binding Cost}" Header="Стоим без дост" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Cost_with_dost}" Header="Стоим с дост" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Kod_poluch}" Header="Получатель" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Kod_shet}" Header="№ счета" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Kod_perevoz}" Header="Перевозчик" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Cost_dost}" Header="Сумма дост" IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
